--- a/Proyecto1/index.html
+++ b/Proyecto1/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="widtd=device-widtd, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Proyecto 1 - Kevin Chévez</title>
     <link href="css/style.css" rel="stylesheet" type="text/css" />
     <link href="css/style2.css" rel="stylesheet" type="text/css" />
@@ -161,12 +161,12 @@
                 <div class="barra-form">
                     <img class="icono" src="imagenes/account_circle_FILL0_wght400_GRAD0_opsz48.png" alt="png de cuenta">
                     <label for="txtfld-nombres">Nombres completos</label>
-                    <input type="text" id="txtfld-nombres" name="nombres" placeholder="Ingrese sus nombres completos.">
+                    <input class="input-text" type="text" id="txtfld-nombres" name="nombres" placeholder="Ingrese sus nombres completos.">
                 </div>
                 <div class="barra-form">
                     <img class="icono" src="imagenes/mail_FILL0_wght400_GRAD0_opsz48.png" alt="png de mail">
                     <label for="txtfld-correo">Correo Electrónico</label>
-                    <input type="text" id="txtfld-correo" name="correo" placeholder="Ingrese su correo electrónico.">
+                    <input class="input-text" type="text" id="txtfld-correo" name="correo" placeholder="Ingrese su correo electrónico.">
                 </div>
                 <div class="barra-form">
                     <img class="icono" src="imagenes/transgender_FILL0_wght400_GRAD0_opsz48.png" alt="png de genero">
@@ -183,19 +183,21 @@
                     <textarea rows="5" cols="30" id="comentario" name="coment" placeholder="Ingrese comentario"></textarea>
                 </div>
                 <div id="chkbox">
-                    <input id="" type="checkbox" name="chkBot" id="chkbot"> No soy un robot <br>
+                    <input id="chkbot" type="checkbox" name="chkBot"> <label for="chkbot">No soy un robot</label>
                 </div>
                 <div id="botonEnviar">
-                    <button>Enviar</button>
+                    <button type="button">Enviar</button>
                 </div>
             </form>
         </section>
         <section>
-            <iframe
+            <div id="MapaBox">
+                <iframe title="Mapa"
                 src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d1968.6790492970904!2d-79.93226991085908!3d-2.212305602936435!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses!2sec!4v1654619999981!5m2!1ses!2sec"
                 width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy"
                 referrerpolicy="no-referrer-when-downgrade">
             </iframe>
+            </div>
         </section>
     </div>
     <aside>
@@ -229,15 +231,17 @@
         </div>
         <div class="bloque-pfooter">
             <img src="imagenes/Myself Logo.png" alt="Logo Myself">
-            <img src="" alt="">
-            <img src="" alt="">
-            <img src="" alt="">
-            <img src="" alt="">
+            <div id="sub-footer">
+                <img class="icono" src="imagenes/facebook.svg" alt="Logo de facebook">
+                <img class="icono" src="imagenes/linkedin.svg" alt="Logo de Linkedin">
+                <img class="icono" src="imagenes/instagram.png" alt="Instagram iconos creados por Hight Quality Icons - Flaticon" href="https://www.flaticon.es/iconos-gratis/instagram" title="Icono obtenido de flaticon.es">
+                <img class="icono" src="imagenes/twitter.svg" alt="Logo de Twitter">
+            </div>
         </div>
         <div id="footer-final">
             <hr>
-            <a href="mailto:kchevez@espol.edu.ec">kchevez@espol.edu.ec</a> <br>
-            Copyright 2020. Myself. All Rights Reserved
+            <a href="mailto:kchevez@espol.edu.ec">kchevez@espol.edu.ec</a>
+            <p>Copyright 2020. Myself. All Rights Reserved</p>
         </div>
     </footer>
 
