Subo cambios finales, añado scroll behavior, justifico el texto y oculto las imágenes en la versión móvil para aprovechar el espacio.

--- a/Proyecto1/index.html
+++ b/Proyecto1/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
@@ -35,7 +35,7 @@
                 Pregúntame
             </a>
         </div>
-        
+
     </nav>
 
     <header>
@@ -43,14 +43,17 @@
         <div class="barra-song">
             <audio controls="yes">
                 <source src="recursos/Post Malone & Quavo - Congratulations.mp3" type="audio/mp3">
-              </audio>
+            </audio>
         </div>
         <div id="bloqVideo">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/52e2lSy7mwo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/52e2lSy7mwo"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe>
         </div>
     </header>
     <div id="contenido">
-        <section >
+        <section>
             <div class="container-fotos">
                 <img src="imagenes/miFoto.jpg" alt="Mi foto Kevin Chévez" id="mifoto">
             </div>
@@ -170,19 +173,22 @@
             <article id="preguntame">
                 <h2>Pregúntame</h2>
                 <p>
-                    Para contactarte conmigo y preguntarme lo que desees, debes llenar los siguientes campos en el formulario:
+                    Para contactarte conmigo y preguntarme lo que desees, debes llenar los siguientes campos en el
+                    formulario:
                 </p>
             </article>
             <form action="POST">
                 <div class="barra-form">
                     <img class="icono" src="imagenes/account_circle_FILL0_wght400_GRAD0_opsz48.png" alt="png de cuenta">
                     <label for="txtfld-nombres">Nombres completos</label>
-                    <input class="input-text" type="text" id="txtfld-nombres" name="nombres" placeholder="Ingrese sus nombres completos.">
+                    <input class="input-text" type="text" id="txtfld-nombres" name="nombres"
+                        placeholder="Ingrese sus nombres completos.">
                 </div>
                 <div class="barra-form">
                     <img class="icono" src="imagenes/mail_FILL0_wght400_GRAD0_opsz48.png" alt="png de mail">
                     <label for="txtfld-correo">Correo Electrónico</label>
-                    <input class="input-text" type="text" id="txtfld-correo" name="correo" placeholder="Ingrese su correo electrónico.">
+                    <input class="input-text" type="text" id="txtfld-correo" name="correo"
+                        placeholder="Ingrese su correo electrónico.">
                 </div>
                 <div class="barra-form">
                     <img class="icono" src="imagenes/transgender_FILL0_wght400_GRAD0_opsz48.png" alt="png de genero">
@@ -196,7 +202,8 @@
                 <div class="barra-form">
                     <img class="icono" src="imagenes/comment_FILL0_wght400_GRAD0_opsz48.png" alt="png de comentario">
                     <label for="comentarios">Comentarios</label>
-                    <textarea rows="5" cols="30" id="comentario" name="coment" placeholder="Ingrese comentario"></textarea>
+                    <textarea rows="5" cols="30" id="comentario" name="coment"
+                        placeholder="Ingrese comentario"></textarea>
                 </div>
                 <div id="chkbox">
                     <input id="chkbot" type="checkbox" name="chkBot"> <label for="chkbot">No soy un robot</label>
@@ -209,10 +216,10 @@
         <section>
             <div id="MapaBox">
                 <iframe title="Mapa"
-                src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d1968.6790492970904!2d-79.93226991085908!3d-2.212305602936435!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses!2sec!4v1654619999981!5m2!1ses!2sec"
-                width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy"
-                referrerpolicy="no-referrer-when-downgrade">
-            </iframe>
+                    src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d1968.6790492970904!2d-79.93226991085908!3d-2.212305602936435!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses!2sec!4v1654619999981!5m2!1ses!2sec"
+                    width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade">
+                </iframe>
             </div>
         </section>
     </div>
@@ -262,7 +269,9 @@
                     <img class="icono" src="imagenes/linkedin.svg" alt="Logo de Linkedin">
                 </a>
                 <a href="https://www.flaticon.es/iconos-gratis/instagram" target="_blank">
-                    <img class="icono" src="imagenes/instagram.png" alt="Instagram iconos creados por Hight Quality Icons - Flaticon" title="Icono obtenido de flaticon.es">
+                    <img class="icono" src="imagenes/instagram.png"
+                        alt="Instagram iconos creados por Hight Quality Icons - Flaticon"
+                        title="Icono obtenido de flaticon.es">
                 </a>
                 <a href="https://mobile.twitter.com/kevinissac2000">
                     <img class="icono" src="imagenes/twitter.svg" alt="Logo de Twitter">
